--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,4 +33,6 @@ jobs:
       run: go build -v ./...
 
     - name: Test
+      env:
+        TEST_LICENSE: ${{ secrets.TEST_LICENSE }}
       run: go test -v ./...
