Increase test timeout (because of Docker image pull)

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Test
       env:
         TEST_LICENSE: ${{ secrets.TEST_LICENSE }}
-      run: go test -v ./...
+      run: go test -timeout 30m -v ./...
