--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         go-version: ^1.14
 
-    - name: Check out code into the Go module directory
+    - name: Check out code
       uses: actions/checkout@v2
 
     - name: Get dependencies
@@ -32,12 +32,28 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      env:
-        TEST_LICENSE: ${{ secrets.TEST_LICENSE }}
-      run: go test -timeout 30m -v ./...
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
 
-    - name: Lint
-      uses: actions-contrib/golangci-lint@v1
-      env:
-        GOROOT: ""
+      - name: Test
+        env:
+          TEST_LICENSE: ${{ secrets.TEST_LICENSE }}
+        run: go test -timeout 30m -v ./...
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Lint
+        uses: actions-contrib/golangci-lint@v1
+        env:
+          GOROOT: ""
