--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,6 +54,9 @@ jobs:
   integration-test:
     name: Integration test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        artifactory: [ '7.2.1', '7.3.2', '7.4.3', '7.5.7', '7.6.3', '7.7.8', '7.9.2', '7.10.6', '7.11.2' ]
     needs: build
     steps:
       - name: Check out code
@@ -62,6 +65,7 @@ jobs:
       - name: Test
         env:
           TEST_LICENSE: ${{ secrets.TEST_LICENSE }}
+          ARTIFACTORY_VERSION: ${{ matrix.artifactory }}
         run: go test -run Integration -timeout 30m -v ./... -coverprofile=coverage.txt -covermode=count
 
       - name: Upload coverage report to Codecov.io
