--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,8 +32,27 @@ jobs:
       - name: Build
         run: go build -v ./...
 
-  test:
-    name: Test
+  unit-test:
+    name: Unit tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Test
+        run: go test -short -timeout 30m -v ./... -coverprofile=coverage.txt -covermode=count
+
+      - name: Upload coverage report to Codecov.io
+        uses: codecov/codecov-action@v1.0.15
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.txt
+          flags: unit-test
+          name: codecov-umbrella
+
+  integration-test:
+    name: Integration test
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -43,16 +62,15 @@ jobs:
       - name: Test
         env:
           TEST_LICENSE: ${{ secrets.TEST_LICENSE }}
-        run: go test -timeout 30m -v ./... -coverprofile=coverage.txt -covermode=count
+        run: go test -run Integration -timeout 30m -v ./... -coverprofile=coverage.txt -covermode=count
 
       - name: Upload coverage report to Codecov.io
         uses: codecov/codecov-action@v1.0.15
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.txt
-          flags: 7.9
+          flags: integration,7.9
           name: codecov-umbrella
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
