--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -10,8 +10,8 @@ linters-settings:
   dupl:
     threshold: 100
   funlen:
-    lines: 100
-    statements: 50
+    lines: 50
+    statements: 25
   gci:
     local-prefixes: github.com/golangci/golangci-lint
   goconst:
@@ -31,7 +31,7 @@ linters-settings:
       - whyNoLint
       - wrapperFunc
   gocyclo:
-    min-complexity: 15
+    min-complexity: 10
   goimports:
     local-prefixes: github.com/golangci/golangci-lint
   golint:
@@ -80,7 +80,6 @@ linters:
     - gocritic
     - gocyclo
     - gofmt
-    #- goimports
     - golint
     - gomnd
     - goprintffuncname
@@ -113,6 +112,7 @@ linters:
   # - godot
   # - godox
   # - goerr113
+  # - goimports
   # - maligned
   # - nestif
   # - prealloc
@@ -125,6 +125,7 @@ issues:
     - path: _test\.go
       linters:
         - gomnd
+        - funlen
     - path: itest_utils\.go
       linters:
         - gomnd
