--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -40,7 +40,11 @@ linters-settings:
     settings:
       mnd:
         # don't include the "operation" and "assign"
-        checks: argument,case,condition,return
+        checks:
+        - argument
+        - case
+        - condition
+        - return
   govet:
     check-shadowing: true
     settings:
@@ -126,7 +130,7 @@ issues:
       linters:
         - gomnd
         - funlen
-    - path: itest_utils\.go
+    - path: test/setup_license\.go
       linters:
         - gomnd
 #    # https://github.com/go-critic/go-critic/issues/926
