--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,66 +1,112 @@
 linters-settings:
-  #  depguard:
-  #    list-type: blacklist
-  #    packages:
-  #      # logging is allowed only by logutils.Log, logrus
-  #      # is allowed to use only in logutils package
-  #      - github.com/sirupsen/logrus
-  #    packages-with-error-message:
-  #      - github.com/sirupsen/logrus: "logging is allowed only by logutils.Log"
+  dogsled:
+    # checks assignments with too many blank identifiers; default is 2
+    max-blank-identifiers: 2
   dupl:
-    threshold: 100
+    # tokens count to trigger issue, 150 by default
+    threshold: 50
+  errcheck:
+    # report about not checking of errors in type assertions: `a := b.(MyStruct)`;
+    # default is false: such cases aren't reported by default.
+    check-type-assertions: true
+    # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`;
+    # default is false: such cases aren't reported by default.
+    check-blank: true
+  errorlint:
+    # Report non-wrapping error creation using fmt.Errorf
+    errorf: true
+  exhaustive:
+    # check switch statements in generated files also
+    check-generated: false
+    # indicates that switch statements are to be considered exhaustive if a
+    # 'default' case is present, even if all enum members aren't listed in the
+    # switch
+    default-signifies-exhaustive: false
   funlen:
     lines: 50
     statements: 25
-  gci:
-    local-prefixes: github.com/golangci/golangci-lint
+  gocognit:
+    # minimal code complexity to report, 30 by default (but we recommend 10-20)
+    min-complexity: 19
   goconst:
-    min-len: 2
+    min-len: 3
     min-occurrences: 2
   gocritic:
+    # Enable multiple checks by tags, run `GL_DEBUG=gocritic golangci-lint run` to see all tags and checks.
+    # Empty list by default. See https://github.com/go-critic/go-critic#usage -> section "Tags".
     enabled-tags:
       - diagnostic
       - experimental
       - opinionated
       - performance
       - style
+    # Which checks should be disabled; can't be combined with 'enabled-checks'; default is empty
     disabled-checks:
       - dupImport # https://github.com/go-critic/go-critic/issues/845
-      - ifElseChain
-      - octalLiteral
       - whyNoLint
-      - wrapperFunc
   gocyclo:
+    # minimal code complexity to report, 30 by default (but we recommend 10-20)
     min-complexity: 10
-  goimports:
-    local-prefixes: github.com/golangci/golangci-lint
+  gofmt:
+    # simplify code: gofmt with `-s` option, true by default
+    simplify: true
   golint:
+    # minimal confidence for issues, default is 0.8
     min-confidence: 0
   gomnd:
     settings:
       mnd:
-        # don't include the "operation" and "assign"
-        checks: argument,case,condition,return
+        # the list of enabled checks, see https://github.com/tommy-muehle/go-mnd/#checks for description.
+        checks:
+          - argument
+          - case
+          - condition
+          - return
   govet:
     check-shadowing: true
-    settings:
-      printf:
-        funcs:
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
+    enable-all: true
   lll:
+    # max line length, lines longer will be reported. Default is 120.
+    # '\t' is counted as 1 character by default, and can be changed with the tab-width option
     line-length: 140
-  maligned:
-    suggest-new: true
   misspell:
+    # Correct spellings using locale preferences for US or UK.
+    # Default is to use a neutral variety of English.
+    # Setting locale to US will correct the British spelling of 'colour' to 'color'.
     locale: US
+  nakedret:
+    # make an issue if func has more lines of code than this setting and it has naked returns; default is 30
+    max-func-lines: 30
+  nestif:
+    # minimal complexity of if statements to report, 5 by default
+    min-complexity: 4
   nolintlint:
-    allow-leading-space: true # don't require machine-readable nolint directives (i.e. with no leading space)
-    allow-unused: false # report any unused nolint directives
-    require-explanation: false # don't require an explanation for nolint directives
-    require-specific: false # don't require nolint directives to be specific about which linter is being skipped
+    # Disable to ensure that nolint directives don't have a leading space. Default is true.
+    allow-leading-space: true
+    # Enable to ensure that nolint directives are all used. Default is true.
+    allow-unused: false
+    # Exclude following linters from requiring an explanation.  Default is [].
+    allow-no-explanation: []
+    # Enable to require an explanation of nonzero length after each nolint directive. Default is false.
+    require-explanation: true
+    # Enable to require nolint directives to mention the specific linter being suppressed. Default is false.
+    require-specific: true
+  #rowserrcheck:
+  unparam:
+    # Inspect exported functions, default is false. Set to true if no external program/library imports your code.
+    # XXX: if you enable this setting, unparam will report a lot of false-positives in text editors:
+    # if it's called for subdir of a project it can't find external interfaces. All text editor integrations
+    # with golangci-lint call it on a directory with the changed file.
+    check-exported: true
+  unused:
+    # treat code as a program (not a library) and report unused exported identifiers; default is false.
+    # XXX: if you enable this setting, unused will report a lot of false-positives in text editors:
+    # if it's called for subdir of a project it can't find funcs usages. All text editor integrations
+    # with golangci-lint call it on a directory with the changed file.
+    check-exported: true
+  whitespace:
+    multi-if: false   # Enforces newlines (or comments) after every multi-line if statement
+    multi-func: false # Enforces newlines (or comments) after every multi-line function signature
 
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
@@ -73,9 +119,11 @@ linters:
     - dogsled
     - dupl
     - errcheck
+    - errorlint
     - exhaustive
     - funlen
     - gochecknoinits
+    - gocognit
     - goconst
     - gocritic
     - gocyclo
@@ -91,6 +139,7 @@ linters:
     - lll
     - misspell
     - nakedret
+    - nestif
     - noctx
     - nolintlint
     - rowserrcheck
@@ -101,39 +150,24 @@ linters:
     - typecheck
     - unconvert
     - unparam
-    - unused
+    #- unused
     - varcheck
     - whitespace
-
-  # don't enable:
-  # - asciicheck
-  # - gochecknoglobals
-  # - gocognit
-  # - godot
-  # - godox
-  # - goerr113
-  # - goimports
-  # - maligned
-  # - nestif
-  # - prealloc
-  # - testpackage
-  # - wsl
 
 issues:
   # Excluding configuration per-path, per-linter, per-text and per-source
   exclude-rules:
     - path: _test\.go
       linters:
-        - gomnd
+        - dupl
         - funlen
+        - gomnd
+        - unused
     - path: itest_utils\.go
       linters:
         - gomnd
         - funlen
-#    # https://github.com/go-critic/go-critic/issues/926
-#    - linters:
-#        - gocritic
-#      text: "unnecessaryDefer:"
+        - unused
 
 service:
   golangci-lint-version: 1.33.x # use the fixed version to not introduce new linters unexpectedly
