--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,15 +49,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ hashFiles('**/go.sum') }}
 
       - name: Test
-        run: go test -short -timeout 10m -v ./... -coverprofile=coverage.txt -covermode=count
-
-      - name: Upload coverage report to Codecov.io
-        uses: codecov/codecov-action@v1.0.15
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.txt
-          flags: unit-test
-          name: codecov-umbrella
+        run: go test -short -timeout 10m -v ./...
 
   integration-test:
     name: Integration test
@@ -80,39 +72,4 @@ jobs:
         env:
           TEST_LICENSE: ${{ secrets.TEST_LICENSE }}
           ARTIFACTORY_VERSION: ${{ matrix.artifactory }}
-        run: go test -run Integration -timeout 30m -v ./test/... -coverprofile=coverage.txt -covermode=count
-
-      - name: Upload coverage report to Codecov.io
-        uses: codecov/codecov-action@v1.0.15
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.txt
-          flags: integration,${{ matrix.artifactory }}
-          name: codecov-umbrella
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-          version: v1.33
-        env:
-          GOROOT: ""
-
-  goreportcard:
-    name: Go Report Card
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Go report card
-        uses: creekorful/goreportcard-action@v1.0
+        run: go test -run Integration -timeout 30m -v ./test/...
