Update GoReportCard for master only

--- a/.github/workflows/static-code-analysis.yml
+++ b/.github/workflows/static-code-analysis.yml
@@ -26,6 +26,7 @@ jobs:
   goreportcard:
     name: Go Report Card
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out code
         uses: actions/checkout@v2
