--- a/.github/workflows/static-code-analysis.yml
+++ b/.github/workflows/static-code-analysis.yml
@@ -6,6 +6,13 @@ on:
   pull_request:
     branches: [ master ]
   workflow_dispatch:
+    inputs:
+      name:
+        type: string
+        required: true
+      home:
+        type: string
+        required: false
 
 jobs:
 
